Fix outer margin overlap on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
   height: 100vh;
 
@@ -14,7 +16,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
+  width: 90vw;
 
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -68,7 +70,7 @@ h4 {
 
 input {
   padding-left: 5px;
-  width: 100%;
+  width: 90%;
   margin-bottom: 10px;
   border-radius: 3px;
   border-width: 1px;
